# Habit-Finance-Tracker

./: README.md  main.py  pyproject.toml
config/: settings.py  urls.py
dashboard/: views.py
dashboard/templates/: button.html  home.html
static/: styles.css
templates/: base.html
tracker/: settings.py
users/migrations/: 0001_initial.py
